log
Fri 17 Mar 2023 05:49:19 PM UTC: 
 tests:  0|6
total_score: 0/70
b21cdcf
Tue 21 Mar 2023 03:41:40 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
607bb08
Tue 21 Mar 2023 03:52:42 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:3: error: ‘new’ undeclared (first use in this function)
   34 |   new -> data = NULL;
      |   ^~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9b74e68
Tue 21 Mar 2023 03:53:30 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   34 |   List List -> data = NULL;
      |             ^~
list.c:34:13: error: expected expression before ‘->’ token
list.c:35:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   35 |   List List -> prev = NULL;
      |             ^~
list.c:35:13: error: expected expression before ‘->’ token
list.c:36:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   36 |   List List -> next = NULL;
      |             ^~
list.c:36:13: error: expected expression before ‘->’ token
Compilation failed
756fabe
Tue 21 Mar 2023 03:57:26 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
6a7f823
Tue 21 Mar 2023 04:16:43 PM UTC: 
 list.c | 25 ++++++++++++++++---------
 1 file changed, 16 insertions(+), 9 deletions(-)
 tests:  2|5
total_score: 15/70
6fde3d3
Wed 22 Mar 2023 02:26:35 AM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
cb67406
Wed 22 Mar 2023 02:36:13 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
5d53f23
Wed 22 Mar 2023 02:46:03 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
3d04b8f
Wed 22 Mar 2023 02:47:33 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
926f44e
Wed 22 Mar 2023 02:51:44 AM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aca64c3
